loopfor.LoopFor.scala.error
Erreur de compilation :
LoopFor:7: error: value to7 is not a member of Int
for (c2<-1 to7){
           ^